packages/app/app_transform.css
.app-transform-input {
    background:white;
    resize: none;
    overflow: auto;
    font-size:16px;
    height:180px;
    width:90%;
    margin:10px 10px 10px 10px;
}

.app-transform-convert {
    width:100px;
}

.app-transform-output {
    display:none;
}

.app-transform-layout {
    position:absolute;
    left:0px;
    right:0px;
    top:0px;
    bottom:0px;
    overflow:hidden;
    font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
    line-height:2.5;
    font-size:24px;
    direction: ltr;
    display:flex;
    flex:1;
    flex-direction:column;
}

.app-transform-layout.hebrew {
    direction: rtl;
}

.app-transform-spinner {
    flex:0;
    position: absolute;
    left: 50%;
    top: 50%;
    z-index: 1;
    margin: -75px 0 0 -75px;
    border: 16px solid #f3f3f3;
    border-radius: 50%;
    border-top: 16px solid #3498db;
    width: 120px;
    height: 120px;
    animation: spin 2s linear infinite;
    visibility:hidden;
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

.app-transform-page {
    position:relative;
    display:flex;
    flex-direction:column;
    box-sizing:border-box;
    border-top:1px solid gray;
    margin:0;
}

.app-transform-page-content {
    padding-left:4em;
    padding-right:4em;
    padding-bottom:40px;
    position:relative;
    text-align:justify;
    box-sizing:border-box;
}

.app-transform-page-content h4 {
    margin:0;
    padding:0;
}

.app-transform-page-content p {
    margin-bottom:1em;
    padding:0;
}

.app-transform-page-header {
    height:50px;
}

.app-transform-page-number{
    position: absolute;
    width:20%;
    height:30px;
    left:40%;
    top: 20px;
    text-align: center;
    background:white;
}

.app-transform-page-number:after{
    position:absolute;
    font-size:50%;
    line-height:100%;
    color:gray;
    content:attr(shortPageNumberText);
    text-align:center;
    top:0px;
    left:0%;
    width:100%;
    height:30px;
}

.app-transform-page-number:hover:after {
    font-size:100%;
    font-weight: bold;
    content:attr(longPageNumberText);
    color:black;
}

.app-transfer-page-scrolltotop {
    position: absolute;
    width:20%;
    height:20px;
    left:40%;
    top: 0px;
    background:white;
}

.app-transfer-page-scrolltotop:after {
    border-style: solid;
    content: '';
    position: absolute;
    left:50%;
    top:0.5em;
    margin-left: -0.125em;
    transform: rotate(-45deg);
    text-align:center;
    border-width: 0.05em 0.05em 0 0;
    width: 0.2em;
    height: 0.2em;
    color:gray;
}

.app-transfer-page-scrolltotop:hover:after{
    color:black;
    top:0.25em;
    border-width: 0.25em 0.25em 0 0;
    margin-left: -0.35em;
    width: 0.45em;
    height: 0.45em;
}

.app-transform-filter {
    position: absolute;
    left:5px;
    width:30%;
    margin-top:5px;
    border: 1px solid black;
    z-index: 10;
}

.app-transform-separator {
    position:absolute;
    left:100px;
    right:100px;
    bottom:50px;
    height:5px;
    background:darkgray;
    box-shadow: 5px 5px 5px lightgray;
}

